--- a/prac2.css
+++ b/prac2.css
@@ -14,4 +14,4 @@ h3 {color: RGBA(0,0,139,0.8);}
 /* Assigment 2-4 */
 .tiled-background {
 background-color: #dcf5f5;
-background-image: url('https://myuni.adelaide.edu.au/courses/75039/files/10149623/download?wrap=1');}
+background-image: url("cross.png");}
