--- a/prac2.css
+++ b/prac2.css
@@ -24,8 +24,8 @@ h4 {font-family: "raleway", sans-serif; font-weight: normal; font-style: italic;
 
 /* Assignment 2-9 */
 #list {list-style-type: none; margin: 0; padding: 0; overflow: hidden; background-color: darkgrey; 
-    color:white; font-family: "raleway";}
-  .internal {float: left;}
+       color:white; font-family: "raleway";}
+.internal {float: left;}
 ol.number{list-style-type: decimal;}
 ul.square{list-style-type: square;}
 ol.roman_numerals {list-style-type: lower-roman;}
@@ -33,3 +33,8 @@ ol.roman_numerals {list-style-type: lower-roman;}
 /* Assignment 2-5 */
 .blue {color:blue;}
 .fancy {font-family: cursive;}
+
+/* Assignment 2-6 */
+.red-border {border: 1px solid red;}
+.red-outline {outline: 1px solid red;}
+hr {border-color: #CFDFE4;}
